update swagger comments and swagger.js for all PUT, POST and PATCH requests (#97)
